--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -2,4 +2,5 @@
 <ul>
 	<li><%=link_to "PFSP 1.2 user guide",'/page/userguide'%></li>
 	<li><%=link_to "PFSP_1.2_multicore.rar",'/page/PFSPwin'%> for windows</li> 
+	<li><%=link_to "perl code for methylation density estimation",'/page/methdns'%></li>
 </ul>
